Fix: layout of search bar on small devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,10 +30,12 @@
 
 .tweets-header-outer {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .search-bar {
   margin-left: auto;
+  flex-wrap: nowrap;
 }
 
 .card-tweet {
